--- a/properties/templates/properties/property_detail.html
+++ b/properties/templates/properties/property_detail.html
@@ -10,23 +10,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-  <style>
+  <!-- <style>
       .custom-blue {
         background-color: hwb(210 7% 54%); /* أزرق فاتح مناسب */
       }
-    </style>
+    </style> -->
 
-<body class="container mt-4 property-detail-body">
+<!-- <body class="container mt-4 property-detail-body"> -->
 
 
-<div class="card">
+
     
 </head>
-<body style="background-color: #f0ddd3; text-align: right;">
+<body class="property-detail-body" style="text-align: right;">
     
-
-    <div class="container py-5">
-        <div class="card custom-blue text-white p-4 mb-4 ">
+    <div class="card">
+      
+    <!-- <div class="container py-5">
+        <div class="card custom-blue text-white p-4 mb-4 "> -->
 
             <h1 class="mb-4 property-title">{{ property.title }}</h1>
             
