--- a/properties/templates/properties/property_list.html
+++ b/properties/templates/properties/property_list.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{ property.title }}</title>
+    <title>{{ future_Land }}</title>
     
     
     <!-- ربط Bootstrap -->
@@ -12,6 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
     <!-- ربط ملف CSS بتاعك -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+
+
+    <meta property="og:title" content="future land - أفضل عروض للبيع والإيجار في أكتوبر" />
+    <meta property="og:description" content="شاهد أحدث العقارات المتاحة في أكتوبر - شقق، فيلات، عمارات وأكثر بأسعار مميزة!" />
+    <meta property="og:image" content="https://alaamohamed24.pythonanywhere.com/properties//static/main/new_logo.png" />
+    <meta property="og:url" content="https://alaamohamed24.pythonanywhere.com/properties/" />
+    <meta property="og:type" content="website" />
     
    
 
