html , css, images

--- a/properties/templates/properties/property_detail.html
+++ b/properties/templates/properties/property_detail.html
@@ -10,17 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-  <!-- <style>
-      .custom-blue {
-        background-color: hwb(210 7% 54%); /* أزرق فاتح مناسب */
-      }
-    </style> -->
-
-<!-- <body class="container mt-4 property-detail-body"> -->
-
-
-
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="property-detail-body" style="text-align: right;">
     
