--- a/properties/static/css/style.css
+++ b/properties/static/css/style.css
@@ -1,18 +1,10 @@
-/* html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #062a46 !important; /* أزرق غامق */
-  color: #fff; /* عشان الكلام يبقى باين */
-} */
-
-/* .card {
-  background-color: #ffead6 !important; /* لون أزرق فاتح */
-} */
+.container-fluid {
+  background-color: #0e5c8d;
+}
 
 .custom-card {
 background-color: #0d304d !important; /* لون أزرق غامق */
-color: white;
+color: rgb(240, 217, 188);
 direction: rtl;
 text-align: right;
 border-radius: 12px;
@@ -191,21 +183,26 @@ border: none;
 
 .custom-table {
   border: 1px solid #e6e4de;
+  width: 100% !important;
+  max-width: 100% !important;
 }
 
 .custom-thead th {
   background-color: #ece5dd !important;  /* أي لون غامق */
   color: #124b8d !important;
+ 
 }
 
 .custom-tbody td {
   background-color: #1a4e83 !important;  /* لون صفوف */
   color: #e3dad1 !important;
+ 
 }
 
 .custom-table th,
 .custom-table td {
   border: 1px solid #0a3662 !important;
+ 
 }
 
 
@@ -343,6 +340,7 @@ border: none;
   justify-content: center;   /* يخليهم في النص */
   gap: 10px;                 /* مسافة بين الصور */
   margin-bottom: 15px;
+  width: 100%;
   flex-wrap: wrap;           /* يخليهم ينزلوا تحت لو المساحة مش كفاية */
 }
 
@@ -377,4 +375,41 @@ border: none;
   text-align: center;
   margin: 0 auto;
   width: fit-content;
+}
+
+
+.custom-about-btn {
+  color: white;
+  background-color: #cec6ba;
+  border-color: #e3bfa0;
+  margin: 20px auto;
+  display: block;
+  width: fit-content;
+}
+
+.custom-about-btn:hover {
+  background-color: #60c0f0;
+  border-color: #1962b6;
+}
+
+
+#about-section {
+  font-family: 'Amiri', serif;   /* نوع الخط */
+  color: #e4cbbb;                /* لون الخط */
+}
+
+/* لو حابة تعملي لون مختلف للعنوان تحديدًا */
+#about-section h2 {
+  font-family: 'Amiri', serif;
+  font-size: 60px;
+  font-weight:400;
+  color: #ebd8cc;                /* لون العنوان */
+}
+
+/* والفقرات */
+#about-section p {
+  font-family: 'Amiri', serif;
+  font-size: 30px;
+  font-weight: 300;
+  color: #ecd9ce;                   /* لون الفقرات */
 }
