--- a/properties/templates/properties/property_list.html
+++ b/properties/templates/properties/property_list.html
@@ -13,11 +13,11 @@
     <!-- ربط ملف CSS بتاعك -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="future land - أفضل عروض للبيع والإيجار في أكتوبر" />
     <meta property="og:description" content="شاهد أحدث العقارات المتاحة في أكتوبر - شقق، فيلات، عمارات وأكثر بأسعار مميزة!" />
-    <meta property="og:image" content="https://alaamohamed24.pythonanywhere.com/properties//static/main/new_logo.png" />
+    <meta property="og:image" content="https://alaamohamed24.pythonanywhere.com/static/main/new_logo.png" />
     <meta property="og:url" content="https://alaamohamed24.pythonanywhere.com/properties/" />
     <meta property="og:type" content="website" />
     
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body 
-     class="container mt-4"> 
+     class="container-fluid mt-4">
      <h1 class="text-center mb-4 custom-header-bg">future Land</h1>
 
     <h1 class="text-center mb-4 custom-header-bg">Property List</h1>
@@ -148,9 +148,37 @@
       </ul>
     </nav>
 
-    <div class="text-center mt-4">
-      <a href="{% url 'about_us' %}" class="btn btn-outline-primary">About Us</a>
+    <!-- <div class="text-center mt-4">
+      <a href="{% url 'about_us' %}" class="btn btn-outline-primary">About Us</a> -->
   </div>
+
+
+  <div class="text-center mt-4">
+    <a href="#" class="btn custom-about-btn" onclick="toggleAbout()">About Us</a>
+  
+    <div id="about-section" style="display: none;" class="about-container mt-4">
+      <h2>من نحن</h2>
+      <p><strong>Future Land</strong></p>
+      <p>
+        نضع المصداقية والشفافية في قلب تعاملاتنا مع عملائنا، فنحن نؤمن أن بناء الثقة هو أساس كل علاقة ناجحة.
+        بخبرة تمتد لأكثر من <strong>10 سنوات</strong> في مجال التسويق العقاري، قدمنا خدمات احترافية لمئات العملاء وساعدناهم في العثور على المنزل المثالي أو الاستثمار العقاري المناسب.
+      </p>
+      <p>
+        لا ينتهي دورنا بمجرد البيع، بل نحرص على تقديم <strong>خدمة ما بعد البيع</strong> لضمان راحة عملائنا واستمرار رضاهم.
+        هدفنا أن نكون دائمًا شركاء في نجاحات عملائنا من خلال تقديم أفضل الحلول العقارية بأعلى جودة ومصداقية.
+      </p>
+  
+      <!-- الصورة -->
+      <img src="{% static 'main/new_logo.png' %}" alt="About Us Image" style="width: 300px; height: auto; margin-top: 15px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" />
+    </div>
+  </div>
+
+  <script>
+    function toggleAbout() {
+      var section = document.getElementById("about-section");
+      section.style.display = section.style.display === "none" ? "block" : "none";
+    }
+  </script>
 
 </body>
 </html>
