--- a/properties/static/css/style.css
+++ b/properties/static/css/style.css
@@ -336,29 +336,29 @@ border: none;
 
 .card-images {
   display: flex;
-  flex-direction: row;       /* يخلي الصور جنب بعض */
-  justify-content: center;   /* يخليهم في النص */
-  gap: 10px;                 /* مسافة بين الصور */
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
   margin-bottom: 15px;
   width: 100%;
-  flex-wrap: wrap;           /* يخليهم ينزلوا تحت لو المساحة مش كفاية */
+  flex-wrap: wrap;
 }
-
-
 
 .card-images img {
   width: 100%;
-  max-width: 300px;
-  height: auto;
+  max-width: 250px;     /* تم تقليله لتوحيد الحجم أكثر */
+  height: 250px;        /* إضافة ارتفاع ثابت */
   flex-shrink: 0;
+  object-fit: cover;    /* لضبط الصورة داخل الإطار */
   border-radius: 10px;
+  display: block;
 }
 
 .property-image {
-  width: 100%;              /* يملأ عرض الكارد */
-  height: 250px;            /* ارتفاع موحد */
-  object-fit: cover;        /* يملأ بدون تشويه */
-  border-radius: 10px 10px 0 0; /* حواف دائرية من فوق */
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
   display: block;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -408,8 +408,8 @@ border: none;
 
 /* والفقرات */
 #about-section p {
-  font-family: 'Amiri', serif;
-  font-size: 30px;
+  font-family:'Cairo', sans-serif;
+  font-size: 25px;
   font-weight: 300;
   color: #ecd9ce;                   /* لون الفقرات */
 }
