--- a/properties/templates/properties/property_detail.html
+++ b/properties/templates/properties/property_detail.html
@@ -103,8 +103,7 @@
 
             <!-- الأزرار -->
             <div class="mb-4 mt-4">
-                <a href="tel:+01119202829" class="btn btn-primary me-2"> Call Now</a>
-                <a href="https://wa.me/2001119202829?text=مرحباً، أريد الاستفسار عن {{ property.title }}" target="_blank" class="btn btn-success">Send WhatsApp
+                <a href="tel:+201119202829" class="btn btn-primary me-2">Call Now</a>                <a href="https://wa.me/2001119202829?text=مرحباً، أريد الاستفسار عن {{ property.title }}" target="_blank" class="btn btn-success">Send WhatsApp
 
 </a>
             </div>
