--- a/properties/templates/properties/property_list.html
+++ b/properties/templates/properties/property_list.html
@@ -13,7 +13,9 @@
     <!-- ربط ملف CSS بتاعك -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   
+
+    <link rel="icon" type="image/png" href="{% static 'main/favicon.png' %}">
 
     <meta property="og:title" content="future land - أفضل عروض للبيع والإيجار في أكتوبر" />
     <meta property="og:description" content="شاهد أحدث العقارات المتاحة في أكتوبر - شقق، فيلات، عمارات وأكثر بأسعار مميزة!" />
